--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && vite build",
-    "deploy": "gh-pages -d dist"
+    "prod": "ultra run build && node dist/index.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,18 +20,22 @@
   },
   "devDependencies": {
     "@cowcoders/eslint-config": "^1.5.5",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "confusing-browser-globals": "^1.0.11",
     "eslint": "^8.27.0",
     "eslint-config-next": "^13.0.3",
-    "eslint-config-standard": "17.0.0-1",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "14.0.0",
+    "eslint-plugin-jest": "^27.1.5",
+    "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-testing-library": "^5.9.1",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.3",
-    "@types/cors": "2.8.12"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
