--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "mkidea-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod": "ultra run build && node dist/index.js",
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon",
     "build": "tsc",
-    "start": "ts-node src/server.ts"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "6.25.6",
+    "reflect-metadata": "0.1.13",
+    "sequelize-typescript": "2.1.5",
+    "mariadb": "3.0.2"
   },
   "devDependencies": {
     "@cowcoders/eslint-config": "^1.5.5",
@@ -36,6 +40,7 @@
     "eslint-plugin-testing-library": "^5.9.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.1.6",
+    "@types/validator": "13.7.10"
   }
 }
