--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "esModuleInterop": true,                            
     "forceConsistentCasingInFileNames": true,            
     "strict": true,                                      
-    "skipLibCheck": true                                 
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true                           
   }
 }
