--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "prod": "ultra run build && node dist/index.js",
+    "start-prod": "node dist/index.js",
     "dev": "nodemon",
     "build": "tsc",
     "lint": "eslint --max-warnings 0 . --ext .ts,.tsx",
