--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
   db:
     container_name: mkidea-db
     image: mariadb
-    env_file: .env
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
       - MYSQL_DATABASE=${DB_NAME}
@@ -11,18 +10,12 @@ services:
       - "3306:3306"
     volumes:
       - ./.env:/app/.env
-      - serverDir:/var/lib/mysql
+      - /Users/romero/Desktop/mkidea-data:/var/lib/mysql
     restart: always
   backend:
     image: mkidea-api:0.0.1
-    env_file: .env
     environment:
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_USER=${DB_USER}
-      - PORT_APP=${PORT_APP}
-      - DB_NAME=${DB_NAME}
       - DB_HOST=mkidea-db
-      - DB_PORT=3306
     ports:
       - "3000:3000"
     volumes:
