--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "modulePathIgnorePatterns": ["<rootDir>/dist/"]
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist/"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -27,7 +29,9 @@
     "express": "^4.18.2",
     "sequelize": "6.25.6",
     "reflect-metadata": "0.1.13",
-    "mariadb": "3.0.2"
+    "mariadb": "3.0.2",
+    "bcryptjs": "2.4.3",
+    "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
     "sequelize-typescript": "2.1.5",
@@ -52,6 +56,8 @@
     "@types/validator": "13.7.10",
     "jest": "29.3.1",
     "@types/jest": "29.2.3",
-    "ts-jest": "29.0.3"
+    "ts-jest": "29.0.3",
+    "@types/bcryptjs": "2.4.2",
+    "@types/jsonwebtoken": "8.5.9"
   }
 }
