--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "reflect-metadata": "0.1.13",
     "mariadb": "3.0.2",
     "bcryptjs": "2.4.3",
-    "jsonwebtoken": "8.5.1"
+    "jsonwebtoken": "8.5.1",
+    "cookie-parser": "1.4.6"
   },
   "devDependencies": {
     "sequelize-typescript": "2.1.5",
@@ -58,6 +59,7 @@
     "@types/jest": "29.2.3",
     "ts-jest": "29.0.3",
     "@types/bcryptjs": "2.4.2",
-    "@types/jsonwebtoken": "8.5.9"
+    "@types/jsonwebtoken": "8.5.9",
+    "@types/cookie-parser": "1.4.3"
   }
 }
