--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Setup   
-        run: npm ci
+        run: npm install
 
       - name: Run tests
         run: npm run test
