--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build and push Docker image
+        if: github.event.action == 'opened' || (github.event.action == 'edited' && github.event.pull_request.approved)
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
