CI/CD on push to main

--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,7 +1,7 @@
 name: Test code, build Containers for Production, push to Dockerhub & deploy into DigitalOcean Droplet.
 
 on: 
-  pull_request:
+  push:
     branches:
       - main
 
