--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - develop
 
 jobs:
   test-back: #job1
@@ -28,14 +29,14 @@ jobs:
         run: npm run test
 
   build-and-deploy-back: #job2
-    needs: test-back
-    name: Build and Deploy Back
     runs-on: ubuntu-latest
+    needs: test-back
+    if: github.ref == 'refs/heads/main'
+    name: Build and Deploy Back
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build and push Docker image
-        if: github.event.action == 'opened' || (github.event.action == 'edited' && github.event.pull_request.approved)
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
